refactor: change protocol

--- a/static/broadcaster.html
+++ b/static/broadcaster.html
@@ -13,8 +13,9 @@
     <script>
       const streamId = Math.random().toString(36).substr(2, 6);
       const clientId = "broadcaster";
+      const protocol = location.protocol === "https:" ? "wss" : "ws";
       const ws = new WebSocket(
-        `ws://${location.host}/ws/${streamId}/broadcaster/${clientId}`
+        `${protocol}://${location.host}/ws/${streamId}/broadcaster/${clientId}`
       );
 
       const peers = {};
