--- a/static/broadcaster.html
+++ b/static/broadcaster.html
@@ -6,18 +6,53 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body
-    class="bg-gray-900 text-white flex flex-col items-center justify-center h-screen"
+    class="bg-gray-900 text-white flex flex-col items-center justify-center h-screen p-4"
   >
-    <h1 class="text-2xl font-bold mb-4">Broadcasting</h1>
-    <video id="localVideo" autoplay muted class="w-1/2 mb-4"></video>
+    <h1 class="text-2xl font-bold mb-16 h-sc">Camerata TV</h1>
+    <div class="flex w-full h-screen gap-4">
+      <video id="localVideo" autoplay muted class="w-[900px] rounded"></video>
+
+      <!-- Chat UI -->
+      <div class="w-1/2 h-full bg-gray-800 rounded p-4 flex flex-col flex-grow">
+        <div
+          id="chatMessages"
+          class="flex-grow overflow-y-auto space-y-1 text-sm max-h-[calc(100vh-180px)]"
+        ></div>
+        <form id="chatForm" class="flex">
+          <input
+            id="chatInput"
+            type="text"
+            placeholder="Type your message..."
+            class="flex-grow rounded px-2 py-1 text-black"
+            autocomplete="off"
+            required
+          />
+          <button
+            type="submit"
+            class="bg-blue-600 hover:bg-blue-700 px-4 py-1 rounded font-semibold"
+          >
+            Send
+          </button>
+        </form>
+      </div>
+    </div>
+
     <script>
       const streamId = Math.random().toString(36).substr(2, 6);
       const clientId = "broadcaster";
       const protocol = location.protocol === "https:" ? "wss" : "ws";
+
+      // WebRTC signaling WS (existing)
       const ws = new WebSocket(
         `${protocol}://${location.host}/ws/${streamId}/broadcaster/${clientId}`
       );
 
+      // Chat WebSocket (new)
+      const chatWs = new WebSocket(
+        `${protocol}://${location.host}/ws/chat/${streamId}/${clientId}`
+      );
+
+      // --- WebRTC code omitted for brevity, keep as is ---
       const peers = {};
       const localVideo = document.getElementById("localVideo");
 
@@ -94,6 +129,51 @@
           console.error("Failed to get media:", err);
           alert("Could not access camera/microphone.");
         });
+
+      // --- Chat code below ---
+
+      const chatMessages = document.getElementById("chatMessages");
+      const chatForm = document.getElementById("chatForm");
+      const chatInput = document.getElementById("chatInput");
+
+      chatWs.onopen = () => {
+        console.log("Chat websocket connected");
+      };
+
+      chatWs.onmessage = ({ data }) => {
+        const msg = JSON.parse(data);
+        if (msg.from === clientId) return;
+        appendMessage(msg.from, msg.content, msg.timestamp);
+      };
+
+      chatForm.addEventListener("submit", (e) => {
+        e.preventDefault();
+        const content = chatInput.value.trim();
+        if (!content) return;
+
+        const message = {
+          from: clientId,
+          content,
+          timestamp: new Date().toISOString(),
+        };
+
+        chatWs.send(JSON.stringify(message));
+        appendMessage("You", content, message.timestamp);
+        chatInput.value = "";
+      });
+
+      function appendMessage(from, content, timestamp) {
+        const div = document.createElement("div");
+        div.className = "px-2 py-1 rounded bg-gray-700";
+
+        const time = new Date(timestamp).toLocaleTimeString();
+
+        div.textContent = `[${time}] ${from}: ${content}`;
+        chatMessages.appendChild(div);
+
+        // Scroll to bottom
+        chatMessages.scrollTop = chatMessages.scrollHeight;
+      }
     </script>
   </body>
 </html>
