--- a/static/viewer.html
+++ b/static/viewer.html
@@ -4,36 +4,106 @@
     <meta charset="UTF-8" />
     <title>Viewer</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              "stream-purple": "#9146ff",
+              "stream-dark": "#0e0e10",
+              "stream-gray": "#18181b",
+              "stream-light-gray": "#26262c",
+            },
+          },
+        },
+      };
+    </script>
   </head>
-  <body
-    class="bg-gray-900 text-white flex flex-col items-center justify-center h-screen p-4"
-  >
-    <h1 class="text-2xl font-bold mb-16 h-sc">Camerata TV</h1>
-    <div class="flex w-full h-screen gap-4">
-      <video id="remoteVideo" autoplay muted class="w-[900px] rounded"></video>
-
-      <!-- Chat UI -->
-      <div class="w-1/2 h-full bg-gray-800 rounded p-4 flex flex-col flex-grow">
-        <div
-          id="chatMessages"
-          class="flex-grow overflow-y-auto space-y-1 text-sm max-h-[calc(100vh-180px)]"
-        ></div>
-        <form id="chatForm" class="flex">
-          <input
-            id="chatInput"
-            type="text"
-            placeholder="Type your message..."
-            class="flex-grow rounded px-2 py-1 text-black"
-            autocomplete="off"
-            required
+  <body class="bg-stream-dark text-white">
+    <header class="bg-stream-gray border-b border-gray-700 px-4 py-2">
+      <div class="flex items-center justify-between">
+        <div class="flex items-center space-x-4">
+          <h1 class="text-2xl font-bold text-stream-purple">StreamHub</h1>
+        </div>
+        <div class="flex items-center space-x-4">
+          <div class="flex items-center space-x-2 bg-red-600 px-3 py-1 rounded">
+            <div class="w-2 h-2 bg-white rounded-full animate-pulse"></div>
+            <span class="text-sm font-bold">LIVE</span>
+            <div class="text-sm">
+              <span class="viewers">0</span>
+              <span> viewers </span>
+            </div>
+          </div>
+          <img
+            src="https://eu.ui-avatars.com/api/?name=John+Doe"
+            alt="Profile"
+            class="w-8 h-8 rounded-full"
           />
-          <button
-            type="submit"
-            class="bg-blue-600 hover:bg-blue-700 px-4 py-1 rounded font-semibold"
+        </div>
+      </div>
+    </header>
+
+    <div class="flex h-[calc(100vh-57px)]">
+      <!-- Main Video Area -->
+      <div class="flex-1 p-4">
+        <div class="bg-black rounded-lg overflow-hidden mb-4 relative">
+          <video
+            id="remoteVideo"
+            class="w-full h-96 bg-gray-900"
+            autoplay
+            muted
+            controls
           >
-            Send
-          </button>
-        </form>
+            Your browser does not support the video tag.
+          </video>
+          <div
+            class="absolute top-4 left-4 bg-red-600 px-3 py-1 rounded text-sm font-bold"
+          >
+            🔴 LIVE
+          </div>
+          <div
+            class="absolute top-4 right-4 bg-black bg-opacity-75 px-3 py-1 rounded text-sm"
+          >
+            <span class="viewers"> 0 </span>
+            <span> viewers </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Chat Sidebar -->
+      <div class="w-80 bg-stream-gray border-l border-gray-700 flex flex-col">
+        <!-- Chat Header -->
+        <div class="p-4 border-b border-gray-700">
+          <h3 class="text-lg font-bold">Stream Chat</h3>
+          <div class="">
+            <span class="text-sm text-gray-400 viewers">0</span>
+            <span class="text-sm text-gray-400">chatters</span>
+          </div>
+        </div>
+
+        <!-- Chat Messages -->
+        <div
+          class="flex-1 overflow-y-auto p-4 space-y-3"
+          id="chatMessages"
+        ></div>
+
+        <!-- Chat Input -->
+        <div class="p-4 border-t border-gray-700">
+          <form id="chatForm" class="flex space-x-2">
+            <input
+              id="chatInput"
+              type="text"
+              placeholder="Send a message..."
+              class="flex-1 bg-stream-light-gray px-3 py-2 rounded text-white placeholder-gray-400"
+            />
+            <button
+              type="submit"
+              class="bg-stream-purple px-4 py-2 rounded hover:bg-purple-600"
+            >
+              Send
+            </button>
+          </form>
+        </div>
       </div>
     </div>
 
@@ -77,6 +147,14 @@
 
       ws.onmessage = async ({ data }) => {
         const msg = JSON.parse(data);
+
+        if (msg?.total_viewers) {
+          const divs = document.querySelectorAll(".viewers");
+
+          divs.forEach((item) => {
+            item.textContent = msg.total_viewers;
+          });
+        }
 
         if (msg.type === "stream-closed") {
           alert("The stream has ended by the broadcaster.");
@@ -137,13 +215,23 @@
       });
 
       function appendMessage(from, content, timestamp) {
-        const div = document.createElement("div");
-        div.className = "px-2 py-1 rounded bg-gray-700";
+        const avatarName =
+          from !== "You" ? (from === "broadcaster" ? "Streamer" : from) : "You";
+        const messageHTML = `
+            <div class="flex items-start space-x-2">
+                <img
+                  src="https://eu.ui-avatars.com/api/?name=${avatarName}"
+                  alt="User"
+                  class="w-6 h-6 rounded-full"
+                />
+                <div>
+                    <span class="text-sm font-bold text-blue-400">${avatarName}</span>
+                    <p class="text-sm">${content}</p>
+                </div>
+            </div>
+        `;
 
-        const time = new Date(timestamp).toLocaleTimeString();
-
-        div.textContent = `[${time}] ${from}: ${content}`;
-        chatMessages.appendChild(div);
+        chatMessages.insertAdjacentHTML("beforeend", messageHTML);
 
         // Scroll to bottom
         chatMessages.scrollTop = chatMessages.scrollHeight;
