--- a/static/viewer.html
+++ b/static/viewer.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Viewer</title>
+    <title>StreamHub - Live Streams</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
