--- a/static/index.html
+++ b/static/index.html
@@ -3,31 +3,125 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Live Stream</title>
+    <title>StreamHub - Live Streams</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              "twitch-purple": "#9146ff",
+              "twitch-dark": "#0e0e10",
+              "twitch-gray": "#18181b",
+              "twitch-light-gray": "#26262c",
+            },
+          },
+        },
+      };
+    </script>
   </head>
-  <body class="bg-gray-100 flex flex-col items-center justify-center h-screen">
-    <div class="space-y-4">
-      <h1 class="text-3xl font-bold">Live Stream App</h1>
-      <div>
-        <a href="broadcaster" class="bg-blue-500 text-white px-4 py-2 rounded"
-          >Start Stream</a
-        >
-      </div>
-      <div>
-        <form action="viewer" method="GET">
+  <body class="bg-twitch-dark text-white min-h-screen">
+    <!-- Header -->
+    <header class="bg-twitch-gray border-b border-gray-700 px-6 py-4">
+      <div class="flex items-center justify-between max-w-7xl mx-auto">
+        <div class="flex items-center space-x-6">
+          <h1 class="text-3xl font-bold text-twitch-purple">StreamHub</h1>
+        </div>
+        <div class="flex items-center space-x-4">
           <input
             type="text"
-            name="streamId"
-            placeholder="Enter Stream ID"
-            required
-            class="px-2 py-1 border rounded"
+            placeholder="Search streams..."
+            class="bg-twitch-light-gray px-4 py-2 rounded-lg text-white placeholder-gray-400 w-64"
           />
-          <button class="bg-green-500 text-white px-4 py-2 rounded">
-            Join Stream
-          </button>
-        </form>
+          <a
+            href="/broadcaster"
+            class="bg-twitch-purple px-6 py-2 rounded-lg font-semibold hover:bg-purple-600 transition-colors flex items-center space-x-2"
+          >
+            <span>🎥</span>
+            <span>Start Stream</span>
+          </a>
+        </div>
       </div>
-    </div>
+    </header>
+
+    <!-- Main Content -->
+    <main class="max-w-7xl mx-auto px-6 py-8 h-[calc(100vh-162px)]">
+      <!-- Page Title -->
+      <div class="mb-8">
+        <h2 class="text-2xl font-bold mb-2">Live Streams</h2>
+        <p class="text-gray-400">
+          Discover amazing live content from creators around the world
+        </p>
+      </div>
+
+      <!-- Streams Grid -->
+      <div
+        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6"
+      ></div>
+
+      <!-- Call to Action -->
+      <div class="mt-12 text-center bg-twitch-gray rounded-lg p-8">
+        <h3 class="text-2xl font-bold mb-4">Ready to Start Streaming?</h3>
+        <p class="text-gray-400 mb-6">
+          Share your passion with the world and build your community
+        </p>
+        <a
+          href="/broadcaster"
+          class="bg-twitch-purple px-8 py-3 rounded-lg font-semibold hover:bg-purple-600 transition-colors inline-flex items-center space-x-2"
+        >
+          <span>🎥</span>
+          <span>Start Your Stream Now</span>
+        </a>
+      </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-twitch-gray border-t border-gray-700 py-8">
+      <div class="max-w-7xl mx-auto px-6 text-center text-gray-400">
+        <p>&copy; 2024 StreamHub. Built for creators, by creators.</p>
+      </div>
+    </footer>
+
+    <script>
+      async function getStreams() {
+        const response = await fetch("/api/streams");
+        if (!response.ok) {
+          throw new Error("Network response was not ok");
+        }
+
+        return await response.json();
+      }
+
+      (async () => {
+        const streams = await getStreams();
+
+        console.log("Fetched Streams:", streams);
+
+        const streamsContainer = document.querySelector(".grid");
+        streams.forEach((stream) => {
+          const streamCard = document.createElement("div");
+          streamCard.className =
+            "bg-twitch-gray rounded-lg overflow-hidden hover:scale-105 transition-transform cursor-pointer";
+          streamCard.innerHTML = `
+                <div class="relative">
+                  <img src="https://picsum.photos/id/${
+                    Math.floor(Math.random() * 6) + 1
+                  }/5000/3333" alt="Stream" class="w-full h-48 object-cover" />
+                  <div class="absolute top-3 left-3 bg-red-600 px-2 py-1 rounded text-xs font-bold">LIVE</div>
+                  <div class="absolute bottom-3 right-3 bg-black bg-opacity-75 px-2 py-1 rounded text-xs">${
+                    stream.viewers
+                  } viewers</div>
+                </div>
+                <div class="p-4">
+                  <h4 class="font-medium mb-2">Stream ${stream.streamId}</h4>
+                </div>
+              `;
+          streamCard.onclick = () => {
+            window.location.href = "/viewer?streamId=" + stream.streamId;
+          };
+          streamsContainer.appendChild(streamCard);
+        });
+      })();
+    </script>
   </body>
 </html>
