--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StreamHub - Live Streams</title>
+    <title>GoCast - Live Streams</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -25,7 +25,7 @@
     <header class="bg-twitch-gray border-b border-gray-700 px-6 py-4">
       <div class="flex items-center justify-between max-w-7xl mx-auto">
         <div class="flex items-center space-x-6">
-          <h1 class="text-3xl font-bold text-twitch-purple">StreamHub</h1>
+          <h1 class="text-3xl font-bold text-twitch-purple">GoCast</h1>
         </div>
         <div class="flex items-center space-x-4">
           <input
