--- a/static/viewer.html
+++ b/static/viewer.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>StreamHub - Live Streams</title>
+    <title>GoCast - Live Streams</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -23,7 +23,7 @@
     <header class="bg-stream-gray border-b border-gray-700 px-4 py-2">
       <div class="flex items-center justify-between">
         <div class="flex items-center space-x-4">
-          <h1 class="text-2xl font-bold text-stream-purple">StreamHub</h1>
+          <h1 class="text-2xl font-bold text-stream-purple">GoCast</h1>
         </div>
         <div class="flex items-center space-x-4">
           <div class="flex items-center space-x-2 bg-red-600 px-3 py-1 rounded">
