refactor: navigate user to the index page

--- a/static/viewer.html
+++ b/static/viewer.html
@@ -167,6 +167,7 @@
           pc.close();
           ws.close();
           chatWs.close();
+          document.location.assign("/");
           return;
         }
 
